--- a/.github/workflows/strava-cta-checker.yml
+++ b/.github/workflows/strava-cta-checker.yml
@@ -28,5 +28,11 @@ jobs:
       - name: Setup dependencies
         run: uv sync --frozen
       - name: Check for Strava activities
+        env:
+          STRAVA_CLIENT_ID: ${{ secrets.STRAVA_CLIENT_ID }}
+          STRAVA_CLIENT_SECRET: ${{ secrets.STRAVA_CLIENT_SECRET }}
+          STRAVA_ACCESS_TOKEN: ${{ secrets.STRAVA_ACCESS_TOKEN }}
+          STRAVA_REFRESH_TOKEN: ${{ secrets.STRAVA_REFRESH_TOKEN }}
+          STRAVA_TOKEN_EXPIRES_AT: ${{ secrets.STRAVA_TOKEN_EXPIRES_AT }}
         run: |
           uv run python -m strava_cta.check_activities
