--- a/.github/workflows/strava-cta-checker.yml
+++ b/.github/workflows/strava-cta-checker.yml
@@ -34,5 +34,6 @@ jobs:
           STRAVA_ACCESS_TOKEN: ${{ secrets.STRAVA_ACCESS_TOKEN }}
           STRAVA_REFRESH_TOKEN: ${{ secrets.STRAVA_REFRESH_TOKEN }}
           STRAVA_TOKEN_EXPIRES_AT: ${{ secrets.STRAVA_TOKEN_EXPIRES_AT }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           uv run python -m strava_cta.check_activities
