--- a/.github/workflows/strava-cta-checker.yml
+++ b/.github/workflows/strava-cta-checker.yml
@@ -14,7 +14,6 @@ jobs:
   check-strava-activities:
     runs-on: ubuntu-latest
     permissions:
-      # Required for GitHub CLI to update secrets
       contents: read
       actions: write
     
@@ -34,6 +33,6 @@ jobs:
           STRAVA_ACCESS_TOKEN: ${{ secrets.STRAVA_ACCESS_TOKEN }}
           STRAVA_REFRESH_TOKEN: ${{ secrets.STRAVA_REFRESH_TOKEN }}
           STRAVA_TOKEN_EXPIRES_AT: ${{ secrets.STRAVA_TOKEN_EXPIRES_AT }}
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.STRAVA_CTA_PAT }}
         run: |
           uv run python -m strava_cta.check_activities
